log
Fri Mar 26 19:30:41 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: variable ‘Lista’ set but not used [-Werror=unused-but-set-variable]
   List * Lista;
          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:30:58 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:9: error: variable ‘Lista’ set but not used [-Werror=unused-but-set-variable]
   List *Lista;
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:39:42 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ee3cec2
